<resources>
    <string name="app_name">Payment</string>
    <string name="paymentActivityTitle">Payment</string>
    <string name="cancelationActivityTitle">Cancelation</string>
    <string name="chargeActivityTitle">Get charge</string>
    <string name="confirmActivityTitle">Confirm Transaction</string>
    <string name="pendingTransactionsActivityTitle">Pending Transactions</string>
    <string name="updateEmvTablesTitle">Update EMV Tables</string>
    <string name="deactivateTitle">Terminal Deactivation</string>

    <string name="amountText">Amount</string>
    <string name="partialAmountText">Partial Amount</string>
    <string name="parcialCancelText">Partial Cancel</string>
    <string name="operationTypeText">Operation Type</string>
    <string name="originNsuText">Origin NSU</string>
    <string name="paymentTypeText">Payment Type</string>
    <string name="walletPaymentTypeText">Wallet Payment Type</string>
    <string name="installmentTypeText">Installment Type</string>
    <string name="installmentNumberText">Installment Number</string>
    <string name="manualEntryText">Manual Entry (Typed sale)</string>
    <string name="reversionText">Reversion</string>
    <string name="nsuTransactionText">NSU transaction</string>
    <string name="merchantChargeIdText">Merchant Charge ID transaction</string>
    <string name="useOnlySdkText">Use only SDK</string>

    <string name="initButtonText">Init</string>
    <string name="payButtonText">Pay</string>
    <string name="cancelButtonText">Cancel</string>
    <string name="chargeButtonText">Get charge</string>
    <string name="confirmButtonText">Confirm</string>
    <string name="pendingTransactionsButtonText">Pending Transactions</string>
    <string name="updateEmvTablesButtonText">Update Tables</string>
    <string name="abortOperationButtonText">Abort Operation</string>
    <string name="deactivateButtonText">Deactivate</string>
</resources>
